--- a/aeson.cabal
+++ b/aeson.cabal
@@ -126,7 +126,7 @@ library
     tagged >=0.8.3 && <0.9,
     template-haskell >= 2.7,
     text >= 1.1.1.0,
-    th-abstraction >= 0.2.2 && < 0.3,
+    th-abstraction >= 0.2.1 && <0.3,
     time >= 1.1.1.4,
     time-locale-compat >= 0.1.1 && < 0.2,
     unordered-containers >= 0.2.5.0 && < 0.3,
@@ -163,7 +163,7 @@ library
     ghc-options: -O2
 
   include-dirs: include
-  if impl(ghcjs) || !flag(cffi)
+  if impl(ghcjs) || impl(eta) || !flag(cffi)
     hs-source-dirs: pure
     other-modules: Data.Aeson.Parser.UnescapePure
   else
@@ -171,6 +171,8 @@ library
     cpp-options: -DCFFI
     hs-source-dirs: ffi
     other-modules: Data.Aeson.Parser.UnescapeFFI
+  if impl(eta >= 0.0.9.7)
+     cpp-options: -DHAS_TRAMPOLINE
 
 test-suite tests
   default-language: Haskell2010
