--- a/cabal.project
+++ b/cabal.project
@@ -1,2 +1,12 @@
-with-compiler: ghc
+source-repository-package
+  type: git
+  location: git://github.com/prozacchiwawa/generic-deriving.git
+  branch: th-abstraction-downgrade
+
+source-repository-package
+  type: git
+  location: git://github.com/prozacchiwawa/transformers-compat.git
+  branch: master
+
 packages: .
+  , generic-deriving
